# Trading-Trip

./: .gitignore  .vercelignore  404.html  CHANGELOG.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  Dockerfile  LIVE_DATA_INTEGRATION.md  README.md  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  apply_changes.py  conftest.py  docker-compose.yml  index.html  index.txt  package.json  pyproject.toml  render.yaml  requirements.txt  skills-lock.json  vercel.json
.github/workflows/: deploy.yml
404/: index.html
_not-found/: __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
api/: Dockerfile  server.py  start.sh  ws_server.py
api/brain/: __init__.py  alerts.py  claude_brain.py  macro.py  (+4 more)
assets/: index-0kH7-5-G.css  index-BHVTFkLU.css  index-BRbNectZ.css  index-BSf99S7t.js  index-Bfxy3YRn.js  index-BhjMtQ3u.js  index-C3zMX1OK.js  index-C48rSjLF.js  index-C5DBD9Z4.css  index-C7_WS0qk.css  index-C9deBjMP.js  index-C9ouafiD.js  index-CDoCmIsz.js  index-Ce1ipa2J.css  index-CoYhhL62.css  index-Cp2UOb9S.js  index-DLF_OdWf.css  index-DQTrr3zJ.js  index-DfPiE6I8.js  index-DyMHYgAy.js  index-MxiAlzZJ.js  index-_g2OWzSd.js  index-shRIuhwD.css
backend/: Dockerfile  config.py  main.py  requirements.txt
finsight-app/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/: .env.local.example  .env.production  DOCUMENTATION.md  QUICK_START.md  README.md  next.config.js  package-lock.json  package.json  tsconfig.json
(+137 files in other folders)
