[project]
name = "tradingview-mcp"
version = "0.3.0"
description = "Advanced multi-agent AI trading framework and real-time market analysis MCP server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Atila Ahmettaner" }
]
urls = { Repository = "https://github.com/atilaahmettaner/tradingview-mcp" }
keywords = ["mcp", "tradingview", "crypto", "technical analysis", "screener", "agents"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "mcp[cli]>=1.12.0",
  "tradingview-screener>=0.6.4",
  "tradingview-ta>=3.3.0",
]

[project.scripts]
# Entry point now points to packaged module
tradingview-mcp = "tradingview_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradingview_mcp = ["coinlist/*.txt"]

[tool.uv]
dev-dependencies = []
package = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
